# external_libaries_test

./: .gitignore  CMakeLists.txt  Person.h  README.md  SoccerPlayer.h  functions.h  header.h  main.cpp
src/: Person.cpp  SoccerPlayer.cpp  functions.cpp
